Fix: Don't trigger callback if no reordering has been performed Dev: Moving on to 1.2.1 development
- This fixes DataTables/DataTables #629

Sync to source repo @c4f4e79a263e4d00c2e939a813cf87d4a6ebbcdf

--- a/css/colReorder.foundation.css
+++ b/css/colReorder.foundation.css
@@ -5,6 +5,6 @@ table.DTCR_clonedTable {
 
 div.DTCR_pointer {
   width: 1px;
-  background-color: #008CBA;
+  background-color: #008cba;
   z-index: 201;
 }
