--- a/css/colReorder.foundation.css
+++ b/css/colReorder.foundation.css
@@ -6,6 +6,6 @@ table.DTCR_clonedTable.dataTable {
 
 div.DTCR_pointer {
   width: 1px;
-  background-color: #008cba;
+  background-color: #008CBA;
   z-index: 201;
 }
